[package]
name = "ocelot"
version = "0.1.0"
edition = "2021"

[dependencies]
tch = "0.20.0"
anyhow = "1.0"
image = "0.25"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[features]
cpu = []

[[bin]]
name = "ocelot"
path = "src/main.rs"

[lib]
name = "ocelot"
path = "src/lib.rs"